<resources>
    <string name="app_name">My Material Design</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_next">Next</string>
    <string name="acction_cancel">Cancel</string>
    <string name="sample_title">Gundala</string>
    <string name="sample_description">Gundala Anak Petir</string>
    <string name="sample_image_url"><![CDATA[https://pbs.twimg.com/media/EDOcdrBVUAYPsCg?format=jpg&name=small]]></string>
    <string name="label_product_detail">product_detail</string>
</resources>
