<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="@dimen/dimen_16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardBackgroundColor="?attr/colorPrimaryDark"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/productImage"
            android:transitionName="@string/label_product_detail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:background="?attr/colorPrimaryDark"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/sample_title"
                android:textColor="@color/colorWhite"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/sample_description"
                android:textColor="@color/colorWhite"
                android:textAppearance="?attr/textAppearanceCaption" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>